--- a/Week3/Factored_Representations.ipynb
+++ b/Week3/Factored_Representations.ipynb
@@ -63,10 +63,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6ba614e3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Libraries loaded\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import defaultdict\n",
     "from typing import Set, List, Tuple, Dict\n",
@@ -130,10 +138,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c9bbf848",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial state: ['Clear(A)', 'Clear(B)', 'On(A, Table)', 'On(B, Table)']\n",
+      "After Move(A, Table, B): ['Clear(A)', 'Clear(Table)', 'On(A, B)', 'On(B, Table)']\n",
+      "\n",
+      "Notice: On(B, Table) unchanged - frame axiom handled automatically\n"
+     ]
+    }
+   ],
    "source": [
     "class STRIPSAction:\n",
     "    def __init__(self, name: str, preconditions: Set[str], \n",
@@ -247,10 +266,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "1a045a67",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Domain 'blocksworld' with 1 actions\n",
+      "Problem 1: 3 objects, goal: {'On(A, B)'}\n",
+      "Problem 2: 4 objects, goal: {'On(C, A)'}\n",
+      "\n",
+      "Same domain, different problems. That's the power of separation.\n"
+     ]
+    }
+   ],
    "source": [
     "class PDDLDomain:\n",
     "    def __init__(self, name: str):\n",
@@ -338,10 +369,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ce5540ab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Delete relaxation estimate: inf steps\n",
+      "\n",
+      "This underestimates because relaxed problem ignores conflicts.\n",
+      "But it's computed automatically from the action structure.\n"
+     ]
+    }
+   ],
    "source": [
     "def relaxed_action(action: STRIPSAction) -> STRIPSAction:\n",
     "    \"\"\"Create delete-relaxed version of action\"\"\"\n",
@@ -439,10 +481,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2ab9a651",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plan found:\n",
+      "  1. Move(A, Table, B)\n",
+      "\n",
+      "Notice: Same planner works for ANY PDDL domain.\n",
+      "The heuristic is computed from action structure automatically.\n"
+     ]
+    }
+   ],
    "source": [
     "import heapq\n",
     "\n",
@@ -538,8 +592,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv (3.13.0)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
